# advent-of-code-2021-template

./: Cargo.toml  README.md  timings.md
scripts/: fetch-input.sh  run-problem.sh
