[package]
name = "aoc"
version = "0.1.0"
authors = ["Eduardo S."]
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
regex = "1.5"
once_cell = "1.16"
syn = { version = "1.0.103", features = ["full"] }
quote = "1.0.21"
walkdir = "2.3.2"
itertools = "0.10.5"
hashbrown = "0.12.3"